--- a/gh-pages/style.css
+++ b/gh-pages/style.css
@@ -12,7 +12,6 @@ body {
 }
 
 .milkdown {
-    min-height: 100vh;
     overflow: hidden;
 }
 
